# styled_text

./: Cargo.toml  README.md
.github/workflows/: ci.yml
attributed_text/: Cargo.toml  README.md
attributed_text/src/: edit_behavior.rs  lib.rs  text_storage.rs
styled_text/: README.md
styled_text/src/: attributed_text.rs  lib.rs  text_storage.rs
